--- a/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/modal-crear-editar.html
+++ b/Financiero/templates/Financiero/FlujoCaja/FlujoCajaGeneral/modal-crear-editar.html
@@ -19,7 +19,7 @@
             {% csrf_token %}
             <div class="form-group">
                 <div>
-                    {% input_date_tag 'fecha_movimiento' 'Fecha de movimiento' placeholder="Seleccione una fecha" required="" autocomplete="off" value=flujo_detalle.fecha_movimiento  mensaje_validacion='Por favor seleccione una fecha.' invalido=errores.fecha_movimiento %}
+                    {% input_date_tag 'fecha_movimiento' 'Fecha de movimiento' placeholder="Seleccione una fecha" required="" modal=True autocomplete="off" value=flujo_detalle.fecha_movimiento  mensaje_validacion='Por favor seleccione una fecha.' invalido=errores.fecha_movimiento %}
                 </div>
                 <br>
                 <div>
