--- a/Financiero/templates/Financiero/FlujoCaja/SubtipoMovimiento/modal-crear-editar.html
+++ b/Financiero/templates/Financiero/FlujoCaja/SubtipoMovimiento/modal-crear-editar.html
@@ -4,7 +4,7 @@
     <div class="modal-content">
         <div class="modal-header p-b-0">
             <h4 class="modal-title">
-                {% if opcion == 'editar' %}Editar Subtipo de Movimiento{% else %}Crear Subtipo de Movimiento{% endif %}{{ sub_mov }}
+                {% if opcion == 'editar' %}Editar Subtipo de Movimiento{% else %}Crear Subtipo de Movimiento{% endif %}
             </h4>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true"><i class="fal fa-times"></i></span>
